@@ -22,7 +22,7 @@ import java.time.LocalTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 @Slf4j
 @RestController
@@ -35,47 +35,92 @@ public class PostController {
         this.postService = postService;
     }
 
+    // Helper method to format post data
+    private Map<String, Object> formatPostData(Post post) {
+        Map<String, Object> postData = new HashMap<>();
+        postData.put("id", post.getId());
+        postData.put("title", post.getTitle());
+        postData.put("caption", post.getCaption());
+        postData.put("latitude", post.getLatitude());
+        postData.put("longitude", post.getLongitude());
+        postData.put("createdAt", post.getCreatedAt());
+        postData.put("category", post.getCategory());
+        return postData;
+    }
+
+    // Helper method to create pagination data from a Page object
+    private <T> Map<String, Object> createPaginationData(Page<T> page) {
+        return Map.of(
+                "content", page.getContent(),
+                "totalPages", page.getTotalPages(),
+                "totalElements", page.getTotalElements(),
+                "currentPage", page.getNumber(),
+                "pageSize", page.getSize(),
+                "hasNext", page.hasNext(),
+                "hasPrevious", page.hasPrevious()
+        );
+    }
+
+    // Helper method to create a pageable object
+    private Pageable createPageable(int page, int size) {
+        return PageRequest.of(page, size);
+    }
+
+    // Generic exception handler for controller methods
+    private ResponseEntity<PostResponse> executeWithExceptionHandling(
+            Supplier<ResponseEntity<PostResponse>> action,
+            HttpStatus errorStatus) {
+        try {
+            return action.get();
+        } catch (InvalidPostDataException e) {
+            return createErrorResponse(HttpStatus.BAD_REQUEST, e.getMessage());
+        } catch (NumberFormatException e) {
+            return createErrorResponse(HttpStatus.BAD_REQUEST, "Invalid location parameters");
+        } catch (Exception e) {
+            return createErrorResponse(errorStatus, "Error processing request: " + e.getMessage());
+        }
+    }
+
+    // Helper method to create error responses
+    private ResponseEntity<PostResponse> createErrorResponse(HttpStatus status, String message) {
+        PostResponse errorResponse = new PostResponse(false, message, null);
+        return ResponseEntity.status(status)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(errorResponse);
+    }
+
+    // Helper method to create success responses
+    private ResponseEntity<PostResponse> createSuccessResponse(Object data) {
+        PostResponse response = new PostResponse(true, null, data);
+        return ResponseEntity.ok()
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
+    }
+
+    // Helper method to validate location parameters
+    private void validateLocationParams(Double lat, Double lon) {
+        if (lat == null || lon == null) {
+            throw new InvalidPostDataException("Latitude and longitude are required");
+        }
+    }
+
     @GetMapping("/all")
     public ResponseEntity<PostResponse> findAll(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size) {
-        try {
-            Pageable pageable = PageRequest.of(page, size);
+        return executeWithExceptionHandling(() -> {
+            Pageable pageable = createPageable(page, size);
             Page<Post> postsPage = postService.findAllPaginated(pageable);
 
             List<Map<String, Object>> formattedPosts = postsPage.getContent().stream()
-                    .map(post -> {
-                        Map<String, Object> postData = new HashMap<>();
-                        postData.put("id", post.getId());
-                        postData.put("title", post.getTitle());
-                        postData.put("caption", post.getCaption());
-                        postData.put("latitude", post.getLatitude());
-                        postData.put("longitude", post.getLongitude());
-                        postData.put("createdAt", post.getCreatedAt());
-                        postData.put("category", post.getCategory());
-                        return postData;
-                    })
-                    .collect(Collectors.toList());
+                    .map(this::formatPostData)
+                    .toList();
 
-            Map<String, Object> paginationData = Map.of(
-                    "content", formattedPosts,
-                    "totalPages", postsPage.getTotalPages(),
-                    "totalElements", postsPage.getTotalElements(),
-                    "currentPage", postsPage.getNumber(),
-                    "pageSize", postsPage.getSize(),
-                    "hasNext", postsPage.hasNext(),
-                    "hasPrevious", postsPage.hasPrevious()
-            );
+            Map<String, Object> paginationData = createPaginationData(
+                    new org.springframework.data.domain.PageImpl<>(formattedPosts, pageable, postsPage.getTotalElements()));
 
-            PostResponse response = new PostResponse(true, null, paginationData);
-            return ResponseEntity.ok().contentType(MediaType.APPLICATION_JSON).body(response);
-        } catch (Exception e) {
-            PostResponse errorResponse = new PostResponse(
-                    false, "Error retrieving posts: " + e.getMessage(), null);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .body(errorResponse);
-        }
+            return createSuccessResponse(paginationData);
+        }, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
@@ -89,68 +134,77 @@ public class PostController {
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size) {
 
-        try {
+        return executeWithExceptionHandling(() -> {
             // Explicitly handle null radius
             Double radiusToUse = radius != null ? radius : 10.0;
 
-            // Require lat and lon; throw custom exception if not provided
-            if (lat == null || lon == null) {
-                throw new InvalidPostDataException("Latitude and longitude are required");
-            }
+            // Validate lat and lon
+            validateLocationParams(lat, lon);
 
             // convert LocalDate to localDateTime & handle null
-            LocalDateTime fromDateTime = dateFrom != null ?
-                    LocalDateTime.of(dateFrom, LocalTime.MIN) : null;
-            LocalDateTime toDateTime = dateTo != null ?
-                    LocalDateTime.of(dateTo, LocalTime.MAX) : null;
+            LocalDateTime fromDateTime = dateFrom != null ? LocalDateTime.of(dateFrom, LocalTime.MIN) : null;
+            LocalDateTime toDateTime = dateTo != null ? LocalDateTime.of(dateTo, LocalTime.MAX) : null;
 
-            // page
-            Pageable pageable = PageRequest.of(page, size);
+            // Create pageable
+            Pageable pageable = createPageable(page, size);
 
             // find posts
             Page<Map<String, Object>> posts = postService.findPostsByLocation(
                     lat, lon, radiusToUse, category, fromDateTime, toDateTime, pageable);
 
-            // Create response with pagination metadata
-            Map<String, Object> paginationData = Map.of(
-                    "content", posts.getContent(),
-                    "totalPages", posts.getTotalPages(),
-                    "totalElements", posts.getTotalElements(),
-                    "currentPage", posts.getNumber(),
-                    "pageSize", posts.getSize(),
-                    "hasNext", posts.hasNext(),
-                    "hasPrevious", posts.hasPrevious()
-            );
+            // Create response with pagination data
+            Map<String, Object> paginationData = createPaginationData(posts);
 
-            PostResponse postResponse = new PostResponse(true, null, paginationData);
+            return createSuccessResponse(paginationData);
+        }, HttpStatus.INTERNAL_SERVER_ERROR);
+    }
 
-            return ResponseEntity.ok()
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .body(postResponse);
-        } catch (InvalidPostDataException e) {
-            PostResponse errorResponse = new PostResponse(
-                    false, e.getMessage(), null);
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .body(errorResponse);
-        } catch (NumberFormatException e) {
-            PostResponse errorResponse = new PostResponse(
-                    false, "Invalid location parameters", null);
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .body(errorResponse);
-        } catch (Exception e) {
-            PostResponse errorResponse = new PostResponse(
-                    false, "Error processing request: " + e.getMessage(), null);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .body(errorResponse);
-        }
+    @GetMapping("/feed/distance")
+    public ResponseEntity<PostResponse> getPostsFeedByDistance(
+            @RequestParam Double lat,
+            @RequestParam Double lon,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size) {
+
+        return executeWithExceptionHandling(() -> {
+            // Validate location parameters
+            validateLocationParams(lat, lon);
+
+            // Set up pagination
+            Pageable pageable = createPageable(page, size);
+
+            // Get posts sorted by distance
+            Page<Map<String, Object>> posts = postService.findPostsByDistanceFeed(lat, lon, pageable);
+
+            // Create response with pagination data
+            Map<String, Object> paginationData = createPaginationData(posts);
+
+            return createSuccessResponse(paginationData);
+        }, HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+    @GetMapping("/feed/timestamp")
+    public ResponseEntity<PostResponse> getPostsFeedByTimestamp(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size) {
+
+        return executeWithExceptionHandling(() -> {
+            // Set up pagination
+            Pageable pageable = createPageable(page, size);
+
+            // Get posts sorted by timestamp
+            Page<Map<String, Object>> posts = postService.findPostsByTimestampFeed(pageable);
+
+            // Create response with pagination data
+            Map<String, Object> paginationData = createPaginationData(posts);
+
+            return createSuccessResponse(paginationData);
+        }, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @PostMapping(produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<PostResponse> createPost(@RequestBody PostCreateRequest request) {
-        try {
+        return executeWithExceptionHandling(() -> {
             Post post = postService.createPost(
                     request.getTitle(),
                     request.getCaption(),
@@ -168,35 +222,11 @@ public class PostController {
             return ResponseEntity.status(HttpStatus.CREATED)
                     .contentType(MediaType.APPLICATION_JSON)
                     .body(response);
-        } catch (InvalidPostDataException e) {
-            PostResponse errorResponse = new PostResponse(
-                    false,
-                    e.getMessage(),
-                    null
-            );
-
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .body(errorResponse);
-        } catch (Exception e) {
-            PostResponse errorResponse = new PostResponse(
-                    false,
-                    "Error creating post: " + e.getMessage(),
-                    null
-            );
-
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .body(errorResponse);
-        }
+        }, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     public ResponseEntity<PostResponse> handleArgumentTypeMismatch(MethodArgumentTypeMismatchException ex) {
-        PostResponse errorResponse = new PostResponse(
-                false, "Invalid location parameters", null);
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .contentType(MediaType.APPLICATION_JSON)
-                .body(errorResponse);
+        return createErrorResponse(HttpStatus.BAD_REQUEST, "Invalid location parameters");
     }
 }
